<resources>
    <string name="app_name">Pigeons Date</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_add">Add Pigeon</string>
    
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="pigeon_image">pigeon image</string>

    <string name="action_alive">Alive </string>
    <string name="action_for_sale">For Sale </string>
    <string name="action_sold">Sold </string>
    <string name="action_dead">Dead </string>
    <string name="hint_pigeon_name">Pigeon Name</string>
    <string name="hint_pigeon_type">Pigeon Type</string>
    <string name="hint_pigeon_birth">Pigeon Birth</string>

</resources>